--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.2"
-  }
+  },
+  "overrides": {
+  "react-is": "^19.0.0-rc-02c0e824-20241028"
+}
+
 }
