--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.1",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -22,17 +23,22 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@tanstack/react-query": "^5.59.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "hono": "^4.6.8",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "next-themes": "^0.3.0",
+    "node-appwrite": "^14.1.0",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0",
     "recharts": "^2.13.3",
+    "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -50,7 +56,6 @@
     "eslint-config-next": "15.0.2"
   },
   "overrides": {
-  "react-is": "^19.0.0-rc-02c0e824-20241028"
-}
-
+    "react-is": "^19.0.0-rc-02c0e824-20241028"
+  }
 }
