--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "date-fns": "^4.1.0",
     "hono": "^4.6.8",
     "lucide-react": "^0.454.0",
-    "next": "15.0.2",
+    "next": "^15.0.3",
     "next-themes": "^0.3.0",
     "node-appwrite": "^14.1.0",
-    "react": "19.0.0-rc-02c0e824-20241028",
+    "nuqs": "^2.2.2",
+    "react": "^18.3.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-use": "^17.5.1",
     "recharts": "^2.13.3",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
@@ -53,7 +55,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "^15.0.3"
   },
   "overrides": {
     "react-is": "^19.0.0-rc-02c0e824-20241028"
